--- a/pom.xml
+++ b/pom.xml
@@ -8,22 +8,19 @@
     <groupId>sk.upjs.ics</groupId>
     <artifactId>bookLib</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
-        <!-- Java version -->
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-
-        <!-- Use UTF-8 -->
+        <!-- Java -->
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <!-- JavaFX version -->
-        <javafx.version>23</javafx.version>
+        <!-- JavaFX -->
+        <javafx.version>17</javafx.version>
     </properties>
 
     <dependencies>
-
-        <!-- Lombok (same as in example project) -->
+        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -31,20 +28,19 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- JavaFX modules -->
+        <!-- JavaFX -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>${javafx.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
         </dependency>
 
-        <!-- Spring JDBC (just like in example) -->
+        <!-- Spring JDBC -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
@@ -58,7 +54,7 @@
             <version>8.4.0</version>
         </dependency>
 
-        <!-- Testcontainers (optional but included, matches example project) -->
+        <!-- Testcontainers (DB tests) -->
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>mysql</artifactId>
@@ -70,32 +66,43 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <version>5.10.2</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
     <build>
         <plugins>
+            <!-- Компилятор под Java 17 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <release>${java.version}</release>
+                </configuration>
+            </plugin>
 
-            <!-- JavaFX Maven plugin -->
+            <!-- JavaFX-плагин для mvn javafx:run -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>sk.upjs.ics.Main</mainClass>
+                    <!-- твой главный JavaFX класс -->
+                    <mainClass>booklib.Main</mainClass>
                 </configuration>
             </plugin>
 
-            <!-- Surefire plugin for JUnit 5 -->
+            <!-- JUnit 5 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
+                <configuration>
+                    <useModulePath>false</useModulePath>
+                </configuration>
             </plugin>
-
         </plugins>
     </build>
 
