--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
 
         <!-- JavaFX version -->
         <javafx.version>23</javafx.version>
+
+        <!-- Added for unit/integration tests -->
+        <testcontainers.version>1.20.4</testcontainers.version>
+        <junit.jupiter.version>5.10.2</junit.jupiter.version>
     </properties>
 
     <dependencies>
@@ -58,21 +62,36 @@
             <version>8.4.0</version>
         </dependency>
 
+
         <!-- Testcontainers (optional but included, matches example project) -->
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>mysql</artifactId>
-            <version>1.19.3</version>
+            <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
 
-        <!-- JUnit 5 -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- JUnit 5 (fixed version; DO NOT use RELEASE) -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.13</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
